--- a/projects/kbtv-client/src/app/feature-modules/timesheet-modules/timesheet-statistic/timesheet-statistic/timesheet-statistic.component.html
+++ b/projects/kbtv-client/src/app/feature-modules/timesheet-modules/timesheet-statistic/timesheet-statistic/timesheet-statistic.component.html
@@ -1,4 +1,4 @@
-<app-main-skeleton disableElevation="true">
+<app-main-skeleton>
 
     <ng-container navbar *ngIf="navVm$ | async; let navVm">
         <app-main-top-nav-bar [config]="navVm.navConfig" >
