add padding-top to main skeleton & the ability to disable it

--- a/projects/kbtv-client/src/app/shared/components/main-skeleton/main-skeleton.component.html
+++ b/projects/kbtv-client/src/app/shared/components/main-skeleton/main-skeleton.component.html
@@ -9,7 +9,7 @@
   
     </span>
   
-    <div 
+    <div [style.paddingTop.px]="paddingDisabled ? 0 : 8"
       fxFlex class="main-content" appScrollNavElevationToggler [togglerDisabled]="navTogglerDisabled">
       <ng-content>
     
