--- a/projects/kbtv-client/src/app/feature-modules/mission-modules/mission-list/mission-list/mission-list.component.html
+++ b/projects/kbtv-client/src/app/feature-modules/mission-modules/mission-list/mission-list/mission-list.component.html
@@ -1,6 +1,6 @@
 
 
-  <app-main-skeleton [fabs]="fabs" navTogglerDisabled=true>
+  <app-main-skeleton [fabs]="fabs" navTogglerDisabled=true paddingDisabled=true>
 
     <ng-container navbar *ngIf="navVm$ | async; let navVm">
       <app-main-top-nav-bar [config]="navVm.navConfig">
