--- a/projects/kbtv-client/src/app/feature-modules/timesheet-modules/user-timesheet-list/user-timesheet-list/user-timesheet-list.component.html
+++ b/projects/kbtv-client/src/app/feature-modules/timesheet-modules/user-timesheet-list/user-timesheet-list/user-timesheet-list.component.html
@@ -1,4 +1,4 @@
-<app-main-skeleton *ngIf="navVm$ | async; let navVm" [fabs]="navVm.fabs" navTogglerDisabled=true>
+<app-main-skeleton *ngIf="navVm$ | async; let navVm" [fabs]="navVm.fabs" navTogglerDisabled=true paddingDisabled=true>
 
     <ng-container navbar>
         <app-main-top-nav-bar [config]="navVm.navConfig" >
