add no content to user timesheet list

--- a/projects/kbtv-client/src/app/feature-modules/timesheet-modules/user-timesheet-list/user-timesheet-list/user-timesheet-list-view/user-timesheet-list-view.component.html
+++ b/projects/kbtv-client/src/app/feature-modules/timesheet-modules/user-timesheet-list/user-timesheet-list/user-timesheet-list-view/user-timesheet-list-view.component.html
@@ -22,11 +22,8 @@
 </div> 
 
 <ng-template #noContent>
-    <span class="text-center w-100">
-        <p>Finner ingen timer med gitte filtre. </p>
-        <button mat-raised-button color="accent" class="bounceIn" (click)="filterClicked.emit()">
-            <mat-icon>filter_list</mat-icon>
-            Åpne filter
-        </button>
-    </span>
+    <app-no-content
+        text="Finner ingen timer med gitte filtre." 
+        [buttonInfo]="filterButton"> 
+    </app-no-content>
 </ng-template>
