--- a/projects/kbtv-client/src/app/shared/components/main-skeleton/main-skeleton.component.scss
+++ b/projects/kbtv-client/src/app/shared/components/main-skeleton/main-skeleton.component.scss
@@ -11,17 +11,12 @@
     z-index:1;
     height:100%;
     width:100%;
-    background: mat-color($background, background);
+    background: mat-color($background, card);
 }
 
-.nav-content{
-    z-index:1;
-    background:mat-color($background, card);
-}
+.nav-content{ z-index:1; }
 
-.main-content{
-    overflow-y: auto;
-}
+.main-content{ overflow-y: auto; }
 
 ::ng-deep.main-skeleton-overlay{
     position:absolute;
