refactor main skeleton & add card view type

--- a/projects/kbtv-client/src/app/layout/main-nav/main-nav.component.html
+++ b/projects/kbtv-client/src/app/layout/main-nav/main-nav.component.html
@@ -15,7 +15,7 @@
   <mat-sidenav-content fxLayout="column">
 
     <!-- h-100 for iOS Safari fix -->
-    <div fxFlex>   
+    <div fxFlex fxLayout="row">   
         <router-outlet #outlet="outlet"></router-outlet>    
     </div>
 
