--- a/projects/kbtv-client/src/app/shared/components/main-skeleton/main-skeleton.component.html
+++ b/projects/kbtv-client/src/app/shared/components/main-skeleton/main-skeleton.component.html
@@ -1,6 +1,6 @@
 <div class="main-container" fxLayout="row">
 
-  <div fxLayout="column" class="content-container mat-elevation-z1 max-width" fxFlex 
+  <div fxLayout="column" class="content-container mat-elevation-z2" fxFlex
     [ngClass]="{ 'max-width': !data.disableMaxWidth }">
 
     <span 
